[project]
name = "sagedesk"
version = "0.1.0"
description = "RAG Knowledge Assistant + AI Customer Support Agent"
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-astradb>=0.5.0",

    # LLM & Embeddings
    "groq>=0.11.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.24.0",

    # Vector Store
    "astrapy>=1.5.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # UI
    "streamlit>=1.39.0",

    # Document parsing
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",

    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.2.0",
    "tiktoken>=0.7.0",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "db", "vector", "utils"]